[project]
name = "my-fleet-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fleet-deepagent-export @ git+https://github.com/langchain-ai/fleet-deepagent-export.git",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.24",
    "langgraph-sdk>=0.1.60",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-google-genai>=3.0.0",
]
